# schbang-assignment

./: .gitignore  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_QUICK_START.md  README.md  SOLUTION_ARCHITECTURE.md  part2_workflow_and_ai.md  part4_internal_pitch.md  render.yaml
assingment/: assignment_v2_text.txt  influencer_database.xlsx
backend/: .env.example  .gitignore  Dockerfile  config.py  main.py  pyproject.toml  test_analyze.py
backend/models/: schemas.py
backend/routers/: analytics.py  analyze.py  apify.py  health.py
backend/services/: ai_service.py  apify_service.py  db_service.py  excel_parser.py  scorer.py  shortlister.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
