[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "openpyxl>=3.1.5",
    "openrouter>=0.9.1",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.29",
    "requests>=2.34.2",
    "uvicorn>=0.48.0",
]
